@@ -1,3 +1,8 @@
+2024-02-27  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* testsuite/poke.libpoke/values.c: Use EXIT_FAILURE instead of 1
+	as exit status in case of error.
+
 2024-02-27  Hannes Domani  <ssbssa@yahoo.de>
 
 	* testsuite/poke.libpoke/Makefile.am (COMMON_LDADD): Put
